crates/oxc_css_parser/tests/error/scss/value/function-call/too-many-arbitrary-args.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ too-many-arbitrary-args.scss:2:29
  │
2 │   width: min($arr1..., $arr2...);
  │                             ^^^
